game adjusts combat

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -2,14 +2,15 @@
 GameName=UnrealEngineHourofCode
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/Hour_of_Code/Maps/Level_HOC_world.Level_HOC_world
-GameDefaultMap=/Game/Hour_of_Code/Maps/Level_HOC_world.Level_HOC_world
+EditorStartupMap=/Game/Game01/Maps/MAP_Menu.MAP_Menu
+GameDefaultMap=/Game/Game01/Maps/MAP_Menu.MAP_Menu
 TransitionMap=
 bUseSplitscreen=True
 TwoPlayerSplitscreenLayout=Horizontal
 ThreePlayerSplitscreenLayout=FavorTop
-GlobalDefaultGameMode=/Game/ThirdPersonBP/Blueprints/ThirdPersonGameMode.ThirdPersonGameMode_C
+GlobalDefaultGameMode=/Game/Game01/Blueprint/GameModeMenu.GameModeMenu_C
 GlobalDefaultServerGameMode=None
+GameInstanceClass=/Game/Game01/Blueprint/BP_GameInstance.BP_GameInstance_C
 
 [/Script/IOSRuntimeSettings.IOSRuntimeSettings]
 MinimumiOSVersion=IOS_11
