--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -1,10 +1,11 @@
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=90089C6C4544BD04E02DE5B18D9E3AF7
-ProjectName=HourOfCode_UE
-ProjectVersion=4.1
+ProjectName=Game01
+ProjectVersion=1.0
+Description=Menina Lava e  Cactus adventures
+CompanyName=Guima Games
 
 [StartupActions]
 bAddPacks=True
 InsertPack=(PackSource="StarterContent.upack",PackName="StarterContent")
-
 
