--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -31,6 +31,7 @@ MaxChunkSize=0
 bBuildHttpChunkInstallData=False
 HttpChunkInstallDataDirectory=(Path="")
 WriteBackMetadataToAssetRegistry=Disabled
+bWritePluginSizeSummaryJsons=False
 bCompressed=True
 PackageCompressionFormat=Oodle
 bForceUseProjectCompressionFormatIgnoreHardwareOverride=False
@@ -101,7 +102,11 @@ bSkipMovies=False
 +IniSectionDenylist=StorageServers
 +MapsToCook=(FilePath="/Game/Game01/Maps/MAP_Menu")
 +MapsToCook=(FilePath="/Game/Game01/Maps/MAP_FASE01")
-+MapsToCook=(FilePath="/Game/Game01/Maps/Map_LowPoly")
++MapsToCook=(FilePath="/Game/Game01/Maps/MAP_PlayerSelect")
++MapsToCook=(FilePath="/Game/Game01/Maps/Map_CityGabriel")
++MapsToCook=(FilePath="/Game/Game01/Maps/MAP_TutorialVitor")
+bRetainStagedDirectory=False
+CustomStageCopyHandler=
 
 [/Script/AsyncLoadingScreen.LoadingScreenSettings]
 bPreloadBackgroundImages=True
